Fix widget spacing issues

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -74,7 +74,7 @@
     }
 
     .widget {
-        display: inline-block;
+        display: block;
         width: 100%;
         margin: 15px auto;
         @media only screen and (min-width: 960px) {
