--- a/migration/migration.less
+++ b/migration/migration.less
@@ -5,22 +5,17 @@
 
 
 // Stops padding value overriding section move mode styling on mobile devices
-#migrated-site:not(.is-move-mode) {
+#migrated-site:not(.is-move-mode) .container .widget[data-name="row"] {
+    margin: 0;
+    width: auto;
 
+    @media @tablet {
+        padding: 0;
+    }
 
-    .container .widget[data-name="row"],
-    .container .widget[data-name="row"] .widget {
-        margin: 0;
-        width: auto;
-
-        @media @tablet {
-            padding: 0;
-        }
-
-        .widget {
-            display: block;
-            padding: 0;
-        }
+    .widget {
+        display: block;
+        padding: 0;
     }
 }
 
@@ -37,6 +32,7 @@
         max-width: 100%;
     }
 
+
     .container .widget[data-name="row"] {
         display: block;
     }
@@ -49,6 +45,13 @@
 
     [data-name="row"] .product-item-article .product-item-price {
         padding-left: 30px;
+    }
+
+
+    .responsivecolumns .contactform .button,
+    .responsivecolumns .signupform .form-body .button,
+    .responsivecolumns .blogsearch .form-body .button {
+        margin-bottom: 0;
     }
 
 
